disable temporarily google fonts loading to prevent widget flickering on tool focus
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@42329 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm/hier/usr/share/untangle/web/skins/common/css/admin.css
+++ b/uvm/hier/usr/share/untangle/web/skins/common/css/admin.css
@@ -466,8 +466,15 @@ a.forgot-password:hover {
     top: 3px !important;
 }
 
-.widget .x-tool-img {
+.widget .x-tool-refresh {
     background-image: url(../images/admin/icons/icon_widget_refresh.png);
+    background-position: 0 0;
+    width: 21px;
+    height: 21px;
+}
+
+.widget .x-tool-plus {
+    background-image: url(../images/admin/icons/icon_widget_plus.png);
     background-position: 0 0;
     width: 21px;
     height: 21px;
